[gd_scene load_steps=21 format=3 uid="uid://x5vscg7i04vk"]

[ext_resource type="Script" path="res://Project Kandy/ChocoHound/ChocoHound.gd" id="1_h8eeo"]
[ext_resource type="Shader" uid="uid://cyuovkuipu54b" path="res://Project Kandy/Assets/Shaders/hit_flash.tres" id="3_s0big"]
[ext_resource type="Texture2D" uid="uid://dqjmbeb17h03c" path="res://Project Kandy/ChocoHound/sprites/SnickerHoundPreLunge.png" id="5_0g8e7"]
[ext_resource type="Texture2D" uid="uid://cxosvf0ptmfxc" path="res://Project Kandy/ChocoHound/sprites/SnickerHound.png" id="5_d8bq6"]
[ext_resource type="Texture2D" uid="uid://btuo4066xma6o" path="res://Project Kandy/ChocoHound/sprites/SnickerHoundLunge.png" id="6_o0n3c"]
[ext_resource type="Texture2D" uid="uid://ughaakscpr8g" path="res://Project Kandy/ChocoHound/sprites/SnickerHoundWalk.png" id="7_tcla3"]
[ext_resource type="Texture2D" uid="uid://cmsyrk4bn356n" path="res://Project Kandy/ChocoHound/sprites/SnickerHoundSpot.png" id="8_yvpjw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hckry"]
resource_local_to_scene = true
shader = ExtResource("3_s0big")
shader_parameter/ativo = true
shader_parameter/hit = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_8wl10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_d8bq6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jiuvx"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_d8bq6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_38cdj"]
resource_name = "lunge"
length = 0.24
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_o0n3c")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_dbcc0"]
resource_name = "prelunge"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_0g8e7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_2rw3g"]
resource_name = "spot"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_yvpjw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.45, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_ks4w4"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_tcla3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7sbt"]
_data = {
"RESET": SubResource("Animation_8wl10"),
"idle": SubResource("Animation_jiuvx"),
"lunge": SubResource("Animation_38cdj"),
"prelunge": SubResource("Animation_dbcc0"),
"spot": SubResource("Animation_2rw3g"),
"walk": SubResource("Animation_ks4w4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xija7"]
size = Vector2(30, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su3ax"]
size = Vector2(15, 9)

[sub_resource type="Animation" id="Animation_io0x3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/ativo")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_102jk"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/ativo")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0cpg"]
_data = {
"RESET": SubResource("Animation_io0x3"),
"hit_flash": SubResource("Animation_102jk")
}

[node name="ChocoHound" type="CharacterBody2D" node_paths=PackedStringArray("area_visao", "alvo", "chao_detect", "animacoes", "sprite", "hit_flash", "hitbox", "collisionPolygon")]
scale = Vector2(10, 10)
script = ExtResource("1_h8eeo")
area_visao = NodePath("spot")
alvo = NodePath("target")
chao_detect = NodePath("RayCast2D")
forca_knockback = 2000.0
velocidade = 160.0
animacoes = NodePath("AnimationPlayer")
vida_total = 3
sprite = NodePath("Sprite2D")
hit_flash = NodePath("HitFlashAnimPlay")
hitbox = NodePath("hitbox")
collisionPolygon = NodePath("CollisionPolygon2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hckry")
texture = ExtResource("5_d8bq6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-10, -1.5, 10, -1.5, 10, 8.5, 5, 8.5, 5, 4.5, -3, 4.5, -3, 8.5, -7, 8.5, -7, 4.5, -10, 4.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7sbt")
}
autoplay = "idle"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-13.5, -4.1)
scale = Vector2(0.937, 0.3)

[node name="PontoCapacete" type="Marker2D" parent="."]
position = Vector2(-7.6, -2.7)

[node name="tempoMorte" type="Timer" parent="."]

[node name="patrolTempo" type="Timer" parent="."]
wait_time = 2.0

[node name="spot" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="spot"]
position = Vector2(-22, 2.6)
shape = SubResource("RectangleShape2D_xija7")
debug_color = Color(0.886275, 0.67451, 0, 0.419608)

[node name="target" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="target"]
polygon = PackedVector2Array(-10, -3.5, 10, -3.5, 10, -2.5, 11, -2.5, 11, -1.5, -11, -1.5, -11, -2.5, -10, -2.5)

[node name="hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 7
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox"]
polygon = PackedVector2Array(-11, -1.5, -11, 4.5, -7, 4.5, -7, 7.5, -8, 7.5, -8, 8.5, -3, 8.5, -3, 4.5, 5, 4.5, 5, 8.5, 10, 8.5, 10, 4.5, 11, 4.5, 11, -1.5)

[node name="teste parede" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste parede"]
position = Vector2(-7, 3)
shape = SubResource("RectangleShape2D_su3ax")
debug_color = Color(0, 0.639216, 0.352941, 0.25098)

[node name="HitFlashAnimPlay" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0cpg")
}
autoplay = "hit_flash"

[connection signal="body_entered" from="spot" to="." method="_on_spot_body_entered"]
[connection signal="body_entered" from="target" to="." method="_on_target_body_entered"]
[connection signal="area_shape_entered" from="hitbox" to="." method="_on_target_area_shape_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="teste parede" to="." method="_on_teste_parede_body_entered"]
